<resources>
    <string name="app_name">Clone App CFH</string>
    <string name="title_news">News</string>
    <string name="title_order">Order</string>
    <string name="title_store">Store</string>
    <string name="title_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="update">[ update ]</string>
    <string name="last_name">Last name</string>
    <string name="birthdate">Birthdate</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="logout">Log out</string>
    <string name="btnUpdate">Update</string>
    <string name="giao_hang_den">Giao hàng đến</string>
    <string name="ship_address">Nhập địa chỉ giao hàng</string>
    <string name="address_to_ship">Địa chỉ giao hàng</string>
    <string name="error_api_key">No API key defined in gradle.properties</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="content">Content</string>
    <string name="image">image</string>
    <string name="xem_ngay">Xem Ngay</string>
    <string name="title_layout_news_promotion">Dành Cho Bạn</string>
    <string name="title_layout_news">Tin Tức</string>
    <string name="text_button_login">Đăng Nhập</string>
    <string name="content_user_action_bar_login">Thành Viên Mới • 0</string>
    <string name="name_user_action_bar_login">Cao Trinh</string>
    <string name="title_action_bar_notifications">Thông Báo</string>
    <!-- News -->

    // Detail dialog
    <string name="detail">Chi Tiết</string>
    <string name="open_time"> Giờ mở cửa</string>
    <string name="contact">Liên hệ</string>
    <string name="store">Cửa hàng</string>
    <string name="choose_store">Bạn muốn đến cửa hàng nào</string>

</resources>
