<?xml version = "1.0" encoding = "utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@drawable/custom_bottom_line_action_bar">

    <ImageView
        android:id="@+id/img_news_person"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="6dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_material_16dp"
        android:src="@drawable/ic_person_grey_700_24dp"
        android:contentDescription="@string/image" />
    <TextView
        android:id="@+id/txt_name_news_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_news_person"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/name_user_action_bar_login"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/txt_score_news_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name_news_login"
        android:layout_toEndOf="@id/img_news_person"
        android:layout_marginStart="4dp"
        android:drawableEnd="@drawable/resources_images_icons_ic_stars_yellow_resize"
        android:layout_marginTop="8dp"
        android:text="@string/content_user_action_bar_login"/>

    <ImageView
        android:id="@+id/img_news_notification_sign_in"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_material_16dp"
        android:src="@drawable/ic_notifications_grey_800_24dp"
        android:contentDescription="@string/image" />
</RelativeLayout>
