<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_material_16dp"
    android:gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/img_news_item_ring_notification"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/resources_images_icons_gift"
                android:contentDescription="@string/image" />
            <TextView
                android:id="@+id/txt_news_item_tilte_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/img_news_item_ring_notification"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#333333"/>
            <TextView
                android:id="@+id/txt_news_item_content_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_news_item_tilte_notification"
                android:paddingStart="8dp"
                android:paddingEnd="@dimen/margin_material_16dp"
                android:layout_toEndOf="@+id/img_news_item_ring_notification"
                android:text="@string/content"
                android:lineSpacingExtra="6dp"
                android:textSize="12sp"
                android:textColor="#333333" />

            <TextView
                android:id="@+id/txt_news_item_date_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_news_item_content_notification"
                android:layout_toEndOf="@+id/img_news_item_ring_notification"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="#333333"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txt_news_item_date_notification"
                android:background="@android:color/darker_gray">

            </View>

        </RelativeLayout>

</RelativeLayout>
