<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="@dimen/margin_material_16dp"
        android:layout_marginRight="@dimen/margin_material_16dp"
        android:layout_marginBottom="6dp"
        cardview:cardElevation="4dp"
        cardview:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_news"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/banner_caramel_macchiato"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image" />
            <TextView
                android:id="@+id/txt_tilte_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="@dimen/margin_material_16dp"
                android:paddingRight="@dimen/margin_material_16dp"
                android:text="@string/title"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold"
                android:lineSpacingExtra="6dp" />

            <TextView
                android:id="@+id/txt_content_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingLeft="@dimen/margin_material_16dp"
                android:paddingBottom="24dp"
                android:paddingRight="@dimen/margin_material_16dp"
                android:text="@string/content"
                android:textSize="14sp"
                android:lineSpacingExtra="6dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
