<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7D7D7"
    tools:context=".screen.account.ProfileUserFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#ffffff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:focusable="false"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/first_name"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edtFirstName"
        app:layout_constraintTop_toTopOf="@+id/edtFirstName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_chevron_right_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtFirstName"
        app:layout_constraintEnd_toEndOf="@+id/edtFirstName"
        app:layout_constraintTop_toTopOf="@+id/edtFirstName" />


    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/border"
        android:focusable="false"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/last_name"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edtLastName"
        app:layout_constraintTop_toTopOf="@+id/edtLastName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_chevron_right_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtLastName"
        app:layout_constraintEnd_toEndOf="@+id/edtLastName"
        app:layout_constraintTop_toTopOf="@+id/edtLastName" />


    <EditText
        android:id="@+id/edtBirthDate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/border"
        android:focusable="false"
        android:paddingLeft="16dp"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/birthdate"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edtBirthDate"
        app:layout_constraintTop_toTopOf="@+id/edtBirthDate" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_chevron_right_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtBirthDate"
        app:layout_constraintEnd_toEndOf="@+id/edtBirthDate"
        app:layout_constraintTop_toTopOf="@+id/edtBirthDate" />


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/border"
        android:focusable="false"
        android:paddingLeft="16dp"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtBirthDate" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/email"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toTopOf="@+id/edtEmail" />


    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/border"
        android:focusable="false"
        android:paddingLeft="16dp"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/phone_number"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edtPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/edtPhoneNumber" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_chevron_right_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtPhoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/edtPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/edtPhoneNumber" />


    <EditText
        android:id="@+id/edtGender"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/border"
        android:focusable="false"
        android:paddingLeft="16dp"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPhoneNumber" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/gender"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/edtGender"
        app:layout_constraintTop_toTopOf="@+id/edtGender" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_chevron_right_black"
        app:layout_constraintBottom_toBottomOf="@+id/edtGender"
        app:layout_constraintEnd_toEndOf="@+id/edtGender"
        app:layout_constraintTop_toTopOf="@+id/edtGender" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_btn"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtGender" />

    <de.hdodenhof.circleimageview.CircleImageView
        app:civ_border_color="#FFF"
        app:civ_border_width="1dp"
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/avt"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>